--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "~4.13.0",
     "express-handlebars": "~2.0.1",
     "mongoose": "^4.2.3",
-    "request": "^2.67.0"
+    "request": "^2.67.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
