--- a/package.json
+++ b/package.json
@@ -4,36 +4,36 @@
   "private": true,
   "dependencies": {
     "async": "^1.5.0",
-    "body-parser": "git://github.com/expressjs/body-parser",
+    "body-parser": "^1.14.0",
     "compression": "^1.6.0",
-    "express": "~4.13.0",
-    "express-handlebars": "~2.0.1",
-    "mongoose": "^4.2.3",
+    "express": "^4.13.0",
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^4.3.0",
     "request": "^2.67.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-concurrent": "~2.0.4",
-    "grunt-contrib-clean": "~0.6.0",
+    "grunt-concurrent": "~2.1.0",
+    "grunt-contrib-clean": "~0.7.0",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-connect": "~0.11.2",
     "grunt-contrib-copy": "~0.8.2",
     "grunt-contrib-cssmin": "~0.14.0",
     "grunt-contrib-htmlmin": "~0.6.0",
-    "grunt-contrib-imagemin": "~0.9.4",
-    "grunt-contrib-jshint": "~0.11.3",
+    "grunt-contrib-imagemin": "~1.0.0",
+    "grunt-contrib-jshint": "~0.12.0",
     "grunt-contrib-sass": "~0.9.2",
-    "grunt-contrib-uglify": "~0.10.0",
+    "grunt-contrib-uglify": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-env": "^0.4.4",
     "grunt-express-server": "~0.5.1",
-    "grunt-open": "~0.2.2",
+    "grunt-open": "^0.2.3",
     "grunt-rev": "~0.1.0",
-    "grunt-svgmin": "~2.0.0",
-    "grunt-usemin": "~3.1.0",
-    "load-grunt-tasks": "~3.3.0",
-    "time-grunt": "~0.1.2"
+    "grunt-svgmin": "~3.1.2",
+    "grunt-usemin": "~3.1.1",
+    "load-grunt-tasks": "~3.4.0",
+    "time-grunt": "~1.3.0"
   },
   "engines": {
     "node": ">=0.10.0",
