--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "csv-parse": "^1.0.1",
     "grunt": "~0.4.5",
     "grunt-concurrent": "~2.1.0",
     "grunt-contrib-clean": "~0.7.0",
@@ -33,6 +34,7 @@
     "grunt-svgmin": "~3.1.2",
     "grunt-usemin": "~3.1.1",
     "load-grunt-tasks": "~3.4.0",
+    "stream-transform": "^0.1.1",
     "time-grunt": "~1.3.0"
   },
   "engines": {
