--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "modernizr": "~2.6.2",
     "underscore": "~1.8.0",
-    "handlebars": "~4.0.4"
+    "handlebars": "~4.0.4",
+    "js-marker-clusterer": "*"
   },
   "devDependencies": {}
 }
