--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "modernizr": "~2.6.2",
     "underscore": "~1.8.0",
     "handlebars": "~4.0.4",
-    "js-marker-clusterer": "*"
+    "js-marker-clusterer": "git@github.com:googlemaps/js-marker-clusterer.git#f5a6ef7d43"
   },
   "devDependencies": {}
 }
