--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.14.0",
     "compression": "^1.6.0",
     "express": "^4.13.0",
+    "express-force-domain": "0.0.6",
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.3.0",
     "request": "^2.67.0",
