--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "time-grunt": "~1.3.0"
   },
   "engines": {
-    "node": ">=0.10.0",
-    "npm": ">=2.1.5"
+    "node": "~4.2.0",
+    "npm": "~3.5.0"
   }
 }
