--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: '2'
 
 services:
   # MongoDB container
-  db: 
+  db:
     image: mongo:3
 
   # App container
   app:
-    build: .
+    build: ./docker
     links:
       - db
     environment:
       PORT: 3000
       MONGO_URL: mongodb://db/db
     ports:
-      - "3000:3000"
+      - "${APP_PORT}3000"
     env_file: .env
