--- a/package.json
+++ b/package.json
@@ -1,35 +1,52 @@
 {
   "name": "propsy",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.1.0",
   "dependencies": {
-    "async": "^1.5.0",
-    "body-parser": "^1.14.0",
+    "async": "^2.1.0",
+    "body-parser": "^1.16.0",
     "compression": "^1.6.0",
-    "express": "^4.13.0",
+    "express": "^4.14.0",
     "express-force-domain": "0.0.6",
     "express-handlebars": "^3.0.0",
-    "mongoose": "^4.3.0",
-    "request": "^2.67.0",
-    "underscore": "^1.8.3"
+    "handlebars": "^4.0.4",
+    "js-marker-clusterer": "^1.0.0",
+    "memory-cache": "^0.1.6",
+    "mongoose": "^4.8.0",
+    "request": "^2.79.0",
+    "underscore": "^1.8.3",
+    "zlibjs": "^0.2.0"
   },
   "devDependencies": {
+    "browserify": "^14.0.0",
     "csv-parse": "^1.0.1",
-    "grunt": "~0.4.5",
-    "grunt-contrib-concat": "~1.0.1",
-    "grunt-contrib-connect": "~1.0.2",
-    "grunt-contrib-jshint": "~1.0.0",
-    "grunt-contrib-sass": "~1.0.0",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-env": "^0.4.4",
-    "grunt-express-server": "~0.5.1",
-    "grunt-open": "^0.2.3",
-    "load-grunt-tasks": "~3.4.0",
+    "istanbul": "0.4.5",
+    "mocha": "3.2.0",
+    "modulus": "^6.5.0",
+    "node-mongoose-fixtures": "^0.2.4",
+    "node-sass": "^4.5.0",
+    "should": "^11.2.1",
+    "should-http": "^0.1.0",
     "stream-transform": "^0.1.1",
-    "time-grunt": "~1.3.0"
+    "supertest": "^3.0.0",
+    "supervisor": "^0.12.0",
+    "watchify": "^3.9.0"
   },
   "engines": {
-    "node": "~4.2.0",
+    "node": "~6.9.0",
     "npm": "~3.5.0"
+  },
+  "scripts": {
+    "watchify": "watchify resources/scripts/app.js -o public/scripts/app.js -v",
+    "browserify": "browserify resources/scripts/app.js -o public/scripts/app.js",
+    "sass-watch": "npm run sass && node-sass -w -r resources/styles -o public/styles",
+    "sass": "node-sass -r resources/styles -o public/styles",
+    "watch": "npm run watchify & npm run sass-watch",
+    "build": "npm run browserify && npm run sass",
+    "supervisor": "supervisor -w app.js,app -- app.js",
+    "start": "npm run watch & npm run supervisor",
+    "test": "mocha --require test/support/env --reporter spec --bail --check-leaks test/ test/acceptance/",
+    "test-ci": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --require test/support/env --reporter spec --check-leaks test/ test/acceptance/",
+    "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- --require test/support/env --reporter dot --check-leaks test/ test/acceptance/",
+    "test-tap": "mocha --require test/support/env --reporter tap --check-leaks test/ test/acceptance/"
   }
 }
