Add auth to POST/PUT/DELETE api actions

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ APP_PORT=3000:
 # Google API keys
 GOOGLE_API_CLIENT_KEY=secret
 GOOGLE_API_SERVER_KEY=secret
+
+# Api secret
+# used for authorizing POST/PUT/DELETE calls
+API_SECRET=
